# learn-rust

./: Cargo.toml  README.md
src/: sub_arr.rs
src/learn/: main.rs
src/lession1/: check_char.rs
src/lession2/: ex1.rs  ex2.rs  ex3.rs  ex4.rs
src/lession3/: ex1.rs  ex2.rs  ex3.rs  ex4.rs
src/lession4/: ex1.rs  ex2.rs  ex3.rs  ex4.rs
